--- a/src/routers/routers.module.css
+++ b/src/routers/routers.module.css
@@ -21,7 +21,7 @@
     z-index:1;
 }
 .app_wrapper_content {
-    background-color: #E1E6F9;
+    background-color: #f7f7f9;
     grid-area: с;
     position: relative;
     z-index:1;
