--- a/src/pages/OutputRequestsContainer/OutputRequestsContainer.module.scss
+++ b/src/pages/OutputRequestsContainer/OutputRequestsContainer.module.scss
@@ -7,7 +7,7 @@
   padding-left: 3rem;
   padding-right: 3rem;
 
-  background: linear-gradient($BLUE_100, #FFFFFF);
+//  background: linear-gradient($BLUE_100, #FFFFFF);
   // min-height: 100vh;
 }
 
