--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/OutReqSearchField/OutReqSearchField.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/OutReqSearchField/OutReqSearchField.module.css
@@ -1,10 +1,14 @@
 .loginCommon {
-    padding: 10px;
+    border-color: #cfd3da;
+/*    border-width: 2px;
+    outline: #1F1AB2;*/
+
 }
+
 
 .loginForm {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 40px 1fr;
 }
 
 .legendStyle {
@@ -14,4 +18,15 @@
 
 .fieldSetStyle {
     padding: 10px;
+}
+
+form {
+    border-radius: 8px;
+    background-color: #FFFFFF;
+    padding: 0px;
+}
+
+.imgSearch {
+    padding-left: 10px;
+    width: 40px;
 }
