--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
@@ -1,12 +1,12 @@
 .singleOutputRequest {
     display: grid;
-    grid-template-columns: 150px 430px 150px 260px 190px 80px;
+    grid-template-columns: 1fr 3fr 1fr 2.5fr 1fr 0.7fr;
     grid-template-rows: 65px;
     max-width: max-content;
     background-color: white;
     border-radius: 20px;
     margin-bottom: 15px;
-    padding: 20px;
+    padding: 10px;
 
 }
 .responcesImgStyle {
@@ -16,6 +16,7 @@
 .fontFormating {
     font-size: 20px;
     padding-top: 15px;
+    padding-left: 20px;
     vertical-align: middle;
     display:table-cell;
 }
