--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
@@ -1,22 +1,35 @@
 .singleOutputRequest {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr 2.5fr 1fr 0.7fr;
+    grid-template-columns: 1fr 3fr 1fr 2.5fr 1.8fr 0.7fr;
     grid-template-rows: 65px;
-    max-width: max-content;
     background-color: white;
     border-radius: 20px;
     margin-bottom: 15px;
     padding: 10px;
 
 }
+
+.headersOutputRequests {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr 2.5fr 1.8fr 0.7fr;
+    grid-template-rows: 30px;
+    padding-top: 20px;
+    padding-left: 40px;
+}
 .responcesImgStyle {
     width: 140px;
+    cursor: pointer;
+    margin-left: inherit;
 }
 
 .fontFormating {
-    font-size: 20px;
-    padding-top: 15px;
+    font-size: 16px;
+    padding-top: 20px;
     padding-left: 20px;
-    vertical-align: middle;
-    display:table-cell;
+}
+
+.outReqMenu {
+    padding-top: 15px;
+    cursor: pointer;
+
 }
