--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
@@ -1,6 +1,6 @@
 .singleOutputRequest {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr 2.5fr 1.8fr 0.7fr;
+    grid-template-columns: 1fr 3fr 1.3fr 2.5fr 1.8fr 0.7fr;
     grid-template-rows: 65px;
     background-color: white;
     border-radius: 20px;
@@ -11,7 +11,7 @@
 
 .headersOutputRequests {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr 2.5fr 1.8fr 0.7fr;
+    grid-template-columns: 1fr 3fr 1.3fr 2.5fr 1.8fr 0.7fr;
     grid-template-rows: 30px;
     padding-top: 20px;
     padding-left: 40px;
@@ -32,11 +32,14 @@
 .outReqMenu {
     padding-top: 15px;
     cursor: pointer;
-
 }
 
 .outRecActiveHeader {
-    color: #6266eb
+    color: #6266eb;
+    display: grid;
+    grid-template-columns: 30px 50px;
+    margin-left: inherit;
+    cursor: pointer;
 }
 
 .outRecInActiveHeader {
