--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/OutReqMenu/OutReqMenu.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/OutReqMenu/OutReqMenu.module.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: 60px 100px;
     cursor: pointer;
-
 }
 .textInMenu {
     padding-top:8px
@@ -14,6 +13,9 @@
     margin-left:10px;
 }
 
-.MenuClass {
-    margin: 0px;
+.commonClassForMenu {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    padding: 5px;
 }
