--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/OutReqMenu/OutReqMenu.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/OutReqMenu/OutReqMenu.module.css
@@ -3,6 +3,14 @@
     grid-template-columns: 60px 100px;
     cursor: pointer;
 }
+.outputRequestActiveMenuItem {
+    display: grid;
+    grid-template-columns: 60px 100px;
+    cursor: pointer;
+    background-color: rgba(0, 125, 215, 0.3);
+    border-radius: 5px;
+}
+
 .textInMenu {
     padding-top:8px
 }
@@ -15,7 +23,6 @@
 
 .commonClassForMenu {
     background-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-    padding: 5px;
 }
