--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/SingleOutReq.module.css
@@ -1,22 +1,37 @@
 .singleOutputRequest {
     display: grid;
-    grid-template-columns: 1fr 3fr 1.3fr 2.5fr 1.8fr 0.7fr;
+    grid-template-columns: 1.5fr 3.5fr 1.3fr 2.3fr 1.8fr 0.7fr;
+
     grid-template-rows: 65px;
     background-color: white;
     border-radius: 20px;
     margin-bottom: 15px;
     padding: 10px;
 
+
 }
 
-.headersOutputRequests {
+.outputRequestsHeadersCommon {
     display: grid;
-    grid-template-columns: 1fr 3fr 1.3fr 2.5fr 1.8fr 0.7fr;
-    grid-template-rows: 30px;
+    grid-template-columns: 1.5fr 3.5fr 1.3fr 2.3fr 1.8fr 0.7fr;
+
+    grid-template-rows: 40px;
     padding-top: 20px;
     padding-left: 40px;
     color: #7f8a9b;
+
 }
+
+
+.sortImgStyle {
+    width: 30px;
+    height: 15px;
+    display: inherit;
+    padding-left: 5px;
+    cursor: pointer;
+
+}
+
 .responcesImgStyle {
     width: 140px;
     cursor: pointer;
@@ -36,16 +51,11 @@
 
 .outRecActiveHeader {
     color: #6266eb;
-    display: grid;
-    grid-template-columns: 25px 50px;
-    margin-left: inherit;
     cursor: pointer;
+
 }
 
-.outRecInActiveHeader {
-    color: #6266eb
-}
+.outRecInactiveHeader {
+    cursor: pointer;
 
-.sortImgStyle {
-    width: 20px;
 }
