--- a/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/OutReqMenu/OutReqMenu.module.css
+++ b/src/pages/OutputRequestsContainer/OutputRequsts/ChildComponents/SingleOutputRequest/OutReqMenu/OutReqMenu.module.css
@@ -1,21 +1,21 @@
 .outputRequestMenuItem {
     display: grid;
-    grid-template-columns: 60px 100px;
+    grid-template-columns: 50px 120px;
     cursor: pointer;
 }
 .outputRequestActiveMenuItem {
     display: grid;
-    grid-template-columns: 60px 100px;
+    grid-template-columns: 50px 120px;
     cursor: pointer;
     background-color: rgba(0, 125, 215, 0.3);
-    border-radius: 5px;
 }
 
 .textInMenu {
-    padding-top:8px
+    padding-top:3px;
+    font-size: 18px;
 }
 .iconMenu {
-    width: 30px;
+    width: 25px;
     padding-top:5px;
     padding-bottom:5px;
     margin-left:10px;
@@ -23,6 +23,8 @@
 
 .commonClassForMenu {
     background-color: white;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
